tests/compile/command_modules/branch.gcc.stderr
In file included from include/rcgp-meta.hpp:12,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/branch.cpp:1:
include/meta/directives.hpp: In instantiation of 'auto rcgp::branch(bool, T&&, F&&) [with T = branch_divergent_arms(const rcgp::Device&, const rcgp::ShaderCompiler&, const rcgp::BoundDescriptor<params_a>&, const rcgp::BoundDescriptor<params_b>&, rcgp::ResourceTypeFor<pc_size>&, bool)::<lambda()>; F = branch_divergent_arms(const rcgp::Device&, const rcgp::ShaderCompiler&, const rcgp::BoundDescriptor<params_a>&, const rcgp::BoundDescriptor<params_b>&, rcgp::ResourceTypeFor<pc_size>&, bool)::<lambda()>]':
tests/compile/command_modules/branch.cpp:59:11:   required from here
   59 |                 | branch(flag,
      |                   ~~~~~~^~~~~~
   60 |                         [&] { return dispatch(64); },
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   61 |                         [&] { return bind_descriptors(bound_b) | dispatch(64); });
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/directives.hpp:451:23: error: static assertion failed: branch: both arms must produce identical Commands types; any divergence in effects (bindings, dispatches, barriers) is rejected
  451 |         static_assert(arms_match,
      |                       ^~~~~~~~~~
include/meta/directives.hpp:451:23: note: 'arms_match' evaluates to false
In file included from include/rcgp-meta.hpp:9:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eCompute>, NormalEntry<norm_entry{norm_key{rcgp::KeyKind::eRef, ((void*)(& params_b)), rcgp::Topology::eTriangleList}, rcgp::NormOp::eDep, norm_bar{norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}, norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}}, ((const char*)(& ref_name_storage<params_b>.std::array<char, 9>::_M_elems))}>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/branch.cpp:61:60:   required from here
   61 |                         [&] { return bind_descriptors(bound_b) | dispatch(64); });
      |                                                                                 ^
include/meta/commands.hpp:89:31: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: params_b
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
